--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,31 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  splashscreen: ^1.2.0
+  google_fonts: ^1.1.0
+  firebase_auth:
+  firebase_core:
+  animate_do: ^1.7.3
+  provider: ^4.3.2+2
+  flushbar: ^1.10.4
+  google_nav_bar: ^3.0.0
+  google_maps_flutter: ^1.0.3
+  geolocator: ^6.1.5
+  cloud_firestore:
+  http: ^0.12.2
+  fl_chart: ^0.11.1
+  bubble: ^1.1.9+1
+  url_launcher: ^5.7.5
+  qr_flutter: ^3.2.0
+  qrscan: ^0.2.17
+  awesome_dialog: ^1.2.1
+  location: ^3.0.0
+  flutter_svg: ^0.19.1
+  shimmer: ^1.1.2
+  flutter_blue: ^0.7.3
+  firebase_messaging:
+  shared_preferences: ^0.5.12+4
+  timeago: ^2.0.28
 
 dev_dependencies:
   flutter_test:
