--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   timeago: ^2.0.28
   image_picker: ^0.6.7+14
+  tflite: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -72,8 +73,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    #  - assets/labels.txt
+    #  - assets/model.tflite
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
