--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,4 +66,6 @@ dependencies{
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.browser:browser:1.2.0'
     implementation 'com.google.mlkit:image-labeling-automl:16.0.0'
+    implementation 'com.google.android.gms:play-services-vision:19.0.1'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.1'
 }
