--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,4 +66,5 @@ dependencies{
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.browser:browser:1.2.0'
     implementation 'com.google.mlkit:image-labeling-automl:16.0.0'
+    implementation 'com.google.firebase:firebase-firestore:21.6.0'
 }
