--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,8 +65,10 @@ dependencies{
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'androidx.browser:browser:1.2.0'
-    implementation 'com.google.mlkit:image-labeling-automl:16.0.0'
+    implementation 'com.google.mlkit:image-labeling-automl:16.2.1'
     implementation 'com.google.firebase:firebase-firestore:21.6.0'
     implementation 'com.google.android.gms:play-services-vision:19.0.1'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.1'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
 }
